test/expected/file-error.out
cdecl> cast x into
                  ^
data/cast-error.cdeclrc:1,12: syntax error: "as", "into", or "to" expected
cdecl> declare x int
                 ^
data/declare-error.cdeclrc:1,11: syntax error: "int": "as" expected ("int" is a keyword)
cdecl> explain int
                  ^
data/explain-error.cdeclrc:1,12: error: declaration expected
